--- a/public/style.css
+++ b/public/style.css
@@ -41,3 +41,19 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+div {
+    background-color: blue;
+    width: 300px;
+    padding: 10px;
+    display: none;
+    color: white;
+}
+
+span {
+    color: blue;
+    font-weight: bold;
+}
+span:hover + div {
+    display: block;
+}
