--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,25 @@
+#loginForm {
+    float: left;
+}
+
+#how {
+    float: left;
+    width: 700px;
+    padding: 60px 50px 60px 60px;
+}
+
+.footer {
+    clear: both;
+}
+
+input {
+    margin: 5px;
+}
+
+button {
+    margin: 5px;
+}
+
 .large-text-box {
     width: 300px;
     height: 200px;
