--- a/public/style.css
+++ b/public/style.css
@@ -1,27 +1,18 @@
 body {
-    background-color: #458f39;
-background-image: url(https://www.transparenttextures.com/patterns/crossword.png);
-    color: black;
-    font-family: 'Open Sans', sans-serif;
+    /* background-color: #458f39; */
+/* background-image: url(https://www.transparenttextures.com/patterns/crossword.png); */
+    /* color: black; */
+    /* font-family: 'Open Sans', sans-serif; */
 }
 
 #google_translate_element {
     float: right;
-    margin: 0 50px 0 0;
+    /* margin: 0 50px 0 0; */
 }
 
-#loginForm {
-    float: left;
-}
-
-#how {
-    float: left;
-    width: 540px;
-    font-size: 20px;
-    padding: 0 30px 0 30px;
-    margin: 20px 0 0 80px;
-    background: white;
-    border-radius: 25px;
+#buttonGroup {
+    top: 30%;
+    bottom: auto;
 }
 
 .footer {
@@ -41,13 +32,13 @@ button {
     height: 200px;
 }
 
-#results {
+/* #results {
     background: white;
     border-radius: 25px;
     margin: 20px 20px;
     padding: 30px 50px;
     list-style-type: square;
-}
+} */
 
 /* The Modal (background) */
 .modal {
