--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,13 @@
 body {
-    /* background-color: #458f39; */
-/* background-image: url(https://www.transparenttextures.com/patterns/crossword.png); */
-    /* color: black; */
-    /* font-family: 'Open Sans', sans-serif; */
+    background: white;
+}
+
+.title {
+    font-size: 40px;
+}
+
+.titleButton {
+    font-size: 35px;
 }
 
 #google_translate_element {
@@ -13,6 +18,14 @@ body {
 #buttonGroup {
     top: 30%;
     bottom: auto;
+}
+
+.loginTitle {
+    text-align: center;
+}
+
+.loginButton {
+    text-align: center;
 }
 
 .footer {
@@ -31,14 +44,6 @@ button {
     width: 300px;
     height: 200px;
 }
-
-/* #results {
-    background: white;
-    border-radius: 25px;
-    margin: 20px 20px;
-    padding: 30px 50px;
-    list-style-type: square;
-} */
 
 /* The Modal (background) */
 .modal {
@@ -88,7 +93,7 @@ button {
 }
 
 .notice {
-    color: white;
+    color: black;
     font-weight: bold;
 }
 .notice:hover + div {
