--- a/public/style.css
+++ b/public/style.css
@@ -5,10 +5,26 @@ body {
     /* background-image: url("./images/postcard.jpg"); */
 }
 
+.home {
+    background-image: url("./images/beach.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 500px;
+}
+
+.home2 {
+    height: 100px;
+}
+
 .navbar {
     font-size: 20px;
-    background: white;
-    /* background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png"); */
+    background: #4C96D7;
+    color: white;
+    width: 100%;
+}
+
+.nav-link {
+    color: white;
 }
 
 .title {
@@ -25,9 +41,15 @@ body {
 
 #indexDescription {
     text-align: center;
+    /* color: blue; */
+    /* -webkit-text-stroke: 1px darkblue; */
 }
 
 .helperText {
+    color: gray;
+    font-size: 12px;
+}
+.helperText2 {
     color: gray;
     font-size: 14px;
 }
@@ -37,13 +59,10 @@ body {
     /* margin: 0 50px 0 0; */
 /* } */
 
-/* #buttonGroup { */
-    /* top: 15%; */
-    /* bottom: auto; */
-    /* background: white; */
-    /* padding: 30px; */
-    /* border-radius: 20px; */
-/* } */
+#buttonGroup {
+    position: relative;
+    top: 35%;
+}
 
 .loginTitle {
     text-align: center;
@@ -54,8 +73,8 @@ body {
 }
 
 footer {
-    background: white;
-    /* background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png"); */
+    background: #4C96D7;
+    color: white;
 }
 
 .ourEmail {
