--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,8 @@ body {
 .home {
     background-image: url("./images/beach.jpg");
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     width: 100%;
     height: 500px;
 }
