--- a/public/style.css
+++ b/public/style.css
@@ -27,12 +27,12 @@ body {
 } */
 
 .home {
-    background-image: url("./images/map.jpg");
+    background-image: url("./images/balloons.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 650px;
 }
 
 .home2 {
@@ -43,13 +43,16 @@ body {
     font-size: 20px;
     /* background: #4C96D7; */
     /* background: #894e00; */
-    background: #9a0606;
-    color: white;
+    /* background: #9a0606; */
+    background: white;
+    /* color: white; */
+    color: #1761a0;
     width: 100%;
 }
 
 .nav-link {
-    color: white;
+    /* color: white; */
+    color: #1761a0;
 }
 
 .title {
@@ -66,10 +69,12 @@ body {
 
 #clickHere {
     text-align: center;
+    color: rgb(75, 74, 74);
 }
 
 #indexDescription {
     text-align: center;
+    color: rgb(75, 74, 74);
     /* color: blue; */
     /* -webkit-text-stroke: 1px darkblue; */
 }
@@ -109,8 +114,10 @@ body {
 footer {
     /* background: #4C96D7; */
     /* background: #894e00; */
-    background: #9a0606;
-    color: white;
+    /* background: #9a0606; */
+    background: white;
+    /* color: white; */
+    color: #1761a0;
 }
 
 .ourEmail {
